--- a/.github/workflows/env_test.yml
+++ b/.github/workflows/env_test.yml
@@ -5,10 +5,10 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
+  # pull_request:
+  #   branches:
+  #     - main
+  # workflow_dispatch:
 
 env:
   GLOBAL_ENV_VAR: workflow-level-value
