--- a/.github/workflows/env_test.yml
+++ b/.github/workflows/env_test.yml
@@ -26,7 +26,7 @@ jobs:
       id: step1
       run: |
         echo "Job1 environment variable: $GLOBAL_ENV_VAR"
-        echo NEW_VAR=xyz >> $GITHUB_OUTPUT
+        echo "NEW_VAR=xyz" >> $GITHUB_OUTPUT
 
   job2:
     needs: [job1]
